--- a/app/src/main/res/layout/activity_bitcoin.xml
+++ b/app/src/main/res/layout/activity_bitcoin.xml
@@ -33,24 +33,21 @@
     <ScrollView
         app:layout_constraintTop_toBottomOf="@id/freebit"
         android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"
         android:layout_marginBottom="60dp">
-        <androidx.cardview.widget.CardView
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            app:cardCornerRadius="8dp"
-            android:id="@+id/card"
-            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/meso"
-                android:textAlignment="center"
+                android:background="@drawable/texttext"
                 android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:scrollbars="vertical"
+                android:padding="5dp"
                 android:text="@string/bitcoin"
                 android:textColor="#000"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_height="wrap_content" />
-        </androidx.cardview.widget.CardView>
     </ScrollView>
     <LinearLayout
         android:id="@+id/banner_container"
