--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorDont"
     android:paddingStart="20dp"
+    android:gravity="center"
     android:paddingEnd="20dp"
     android:paddingBottom="2dp"
     tools:context=".OptionsActivity">
@@ -13,10 +14,8 @@
         android:id="@+id/loans"
         android:paddingStart="5dp"
         android:textSize="15sp"
-        android:layout_marginTop="150dp"
         android:drawablePadding="20dp"
         android:gravity="center"
-
         android:layout_width="match_parent"
         android:textColor="#ffffff"
         android:background="@drawable/text"
@@ -25,10 +24,11 @@
         android:text="Loans"
         app:layout_constraintTop_toTopOf="parent"/>
     <TextView
+        android:layout_below="@id/loans"
         android:id="@+id/earnings"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:background="@drawable/text"
+        android:layout_marginTop="10dp"
         android:textColor="#ffffff"
         android:layout_height="30dp"
         android:drawablePadding="20dp"
@@ -40,4 +40,4 @@
         app:layout_constraintTop_toBottomOf="@id/loans"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
