--- a/app/src/main/res/layout/activity_social_media.xml
+++ b/app/src/main/res/layout/activity_social_media.xml
@@ -19,26 +19,25 @@
         android:textColor="@color/colorWhite"
         android:layout_height="wrap_content" />
     <ScrollView
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        android:layout_width="match_parent">
-        <androidx.cardview.widget.CardView
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            app:cardCornerRadius="8dp"
-            android:id="@+id/card"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/meso"
-                android:layout_width="match_parent"
-                android:textAlignment="center"
-                android:text="@string/social"
-                android:textSize="20sp"
-                android:textColor="#000"
-                android:layout_height="wrap_content" />
-        </androidx.cardview.widget.CardView>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="60dp">
+
+        <TextView
+            android:id="@+id/meso"
+            android:background="@drawable/texttext"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:scrollbars="vertical"
+            android:padding="5dp"
+            android:text="@string/social"
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:layout_height="wrap_content" />
+
     </ScrollView>
     <LinearLayout
         android:id="@+id/banner_container"
