--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorDontMid">#00814A</color>
     <color name="colorDontEnd">#159406</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorG">#083500</color>
 </resources>
