--- a/app/src/main/res/layout/activity_kenya.xml
+++ b/app/src/main/res/layout/activity_kenya.xml
@@ -24,14 +24,17 @@
         android:id="@+id/listview"
         android:layout_width="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_height="0dp"/>
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <LinearLayout
         android:id="@+id/banner_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
