--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,126 +4,140 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splash"
     android:paddingStart="10dp"
     android:paddingEnd="0dp"
-    android:background="@drawable/splash"
     tools:context=".Splash">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/ff"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
         app:cardCornerRadius="10dp"
-        android:layout_height="wrap_content">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
-            android:fitsSystemWindows="true"
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            android:id="@+id/image"/>
+            android:fitsSystemWindows="true"
+            android:src="@mipmap/ic_launcher" />
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
-    android:id="@+id/share"
-    android:layout_width="wrap_content"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:cardCornerRadius="4dp"
+        android:id="@+id/share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="308dp"
-    android:layout_height="wrap_content">
+        android:layout_marginTop="250dp"
+        app:cardCornerRadius="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_share" />
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
-    android:layout_width="wrap_content"
-    android:id="@+id/rate"
-    android:layout_marginTop="20dp"
+        android:id="@+id/rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="4dp"
         app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/share"
-    app:cardCornerRadius="4dp"
-    android:layout_height="wrap_content">
-    <ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/ic_star"/>
+        app:layout_constraintTop_toBottomOf="@id/share">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_star" />
     </androidx.cardview.widget.CardView>
+
     <TextView
-    android:id="@+id/policy"
+        android:id="@+id/policy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/textview"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/textview"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="Privacy Policy"
+        android:textColor="@color/colorWhite"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-    android:text="Privacy Policy"
-    android:gravity="center"
-    android:textColor="@color/colorWhite"
-    android:padding="5dp"
-    app:layout_constraintTop_toBottomOf="@id/rate"
-    android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@id/rate" />
+
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="100dp"
         android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="8dp"
-        android:layout_height="50dp">
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="Instant Loan Applications"
             android:textColor="@color/colorDontEnd"
-            android:textSize="15sp"
-            android:text="Instant Loan Applications"/>
+            android:textSize="15sp" />
 
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:layout_width="200dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="50dp"
         android:layout_marginBottom="80dp"
         app:cardCornerRadius="8dp"
-        android:layout_height="50dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="Easy ways to make moeny"
             android:textColor="@color/colorDontEnd"
-            android:textSize="15sp"
-            android:text="Easy ways to make moeny"/>
+            android:textSize="15sp" />
 
     </androidx.cardview.widget.CardView>
+
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingStart="20dp"
         android:id="@+id/proceed"
-        android:paddingEnd="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
+        android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/linear"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="15sp"
-            android:text="Proceed"
-            android:textColor="#000"
             android:drawableEnd="@drawable/ic_arrow_forward"
             android:drawablePadding="10dp"
-            android:layout_height="wrap_content"/>
+            android:text="Proceed"
+            android:textColor="#000"
+            android:textSize="15sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <LinearLayout
         android:id="@+id/banner_container"
         android:layout_width="match_parent"
@@ -131,6 +145,5 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
