--- a/app/src/main/res/layout/icon.xml
+++ b/app/src/main/res/layout/icon.xml
@@ -9,22 +9,27 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="-10dp"
         android:textColor="@color/colorGreen"
-        android:textSize="200sp"
-        android:text="E"/>
-    <TextView
-        android:id="@+id/m"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorGreen"
-        android:textSize="200sp"
-        android:text="A"/>
-    <TextView
-        android:layout_marginTop="200dp"
+        android:textSize="250sp"
+        android:text="L"/>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/ic_attach_money" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="100dp"
         android:textColor="@color/colorGreen"
-        android:textSize="50sp"
         android:text="Loan Apps"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="40dp"
+        android:layout_height="wrap_content"
+        android:textColor="#d4af37"
+        android:text="Make money"/>
 
 </RelativeLayout>
