--- a/app/src/main/res/layout/activity_transition.xml
+++ b/app/src/main/res/layout/activity_transition.xml
@@ -28,12 +28,13 @@
         android:layout_height="wrap_content">
         <TextView
             android:textColor="#fff"
-            android:background="@drawable/textview"
-            android:textSize="20sp"
+            android:background="@drawable/text"
+            android:textSize="12sp"
             android:gravity="center"
+            android:paddingBottom="3dp"
             android:id="@+id/ff"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="Invest and earn in the new crypto world"/>
         <androidx.cardview.widget.CardView
             android:layout_marginTop="5dp"
@@ -51,14 +52,14 @@
         </androidx.cardview.widget.CardView>
         <TextView
             android:textColor="#fff"
-            android:background="@drawable/textview"
-            android:textSize="20sp"
+            android:background="@drawable/text"
+            android:textSize="12sp"
             android:layout_marginTop="5dp"
             android:layout_below="@id/hh"
             android:gravity="center"
             android:id="@+id/buysell"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="Buying and selling "/>
 
     </RelativeLayout>
