--- a/app/src/main/res/layout/activity_insurance.xml
+++ b/app/src/main/res/layout/activity_insurance.xml
@@ -27,12 +27,12 @@
         android:layout_height="wrap_content">
         <TextView
             android:textColor="#fff"
-            android:background="@drawable/textview"
-            android:textSize="20sp"
+            android:background="@drawable/text"
+            android:textSize="12sp"
             android:gravity="center"
             android:id="@+id/broker"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="Broker"/>
         <androidx.cardview.widget.CardView
             android:layout_marginTop="5dp"
@@ -51,13 +51,13 @@
         <TextView
             android:id="@+id/agent"
             android:layout_marginTop="5dp"
-            android:background="@drawable/textview"
+            android:background="@drawable/text"
             android:textColor="#fff"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:gravity="center"
             android:layout_below="@id/card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="Agent"/>
     </RelativeLayout>
     <LinearLayout
