--- a/app/src/main/res/layout/icon.xml
+++ b/app/src/main/res/layout/icon.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:gravity="center"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:rotation="90"
+        android:layout_height="match_parent">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,5 +36,6 @@
         android:layout_height="wrap_content"
         android:textColor="#d4af37"
         android:text="Make money"/>
+    </RelativeLayout>
 
 </RelativeLayout>
