--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -55,13 +55,15 @@
         app:layout_constraintStart_toStartOf="parent"
         android:text="Make money"
         app:layout_constraintTop_toBottomOf="@id/loans"/>
-    <LinearLayout
-        android:orientation="vertical"
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/banner_container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
-        />
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
